<resources>
    <string name="app_name">CryptoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="checkEmailText">Enter the email address \n associated with your account.</string>
    <string name="resetLink">We will email you a link to reset your password</string>
    <string name="send">Send</string>
</resources>