<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ForgotPasswordFragment">

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Forgot Password"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/passwordLottie"
          android:layout_width="230dp"
          android:layout_height="230dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/forgotPassword"
          app:lottie_rawRes="@raw/password2"
          android:layout_marginTop="40dp"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"
          />


    <TextView
        android:id="@+id/checkEmailAddress"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway_semibold"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLottie"
        android:text="@string/checkEmailText"
        android:gravity="center"/>


    <TextView
        android:id="@+id/textResetLink"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkEmailAddress"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="19sp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/resetLink"/>


    <EditText
        android:id="@+id/editReset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textResetLink"
        android:background="@drawable/login_edittext_shape"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_your_email"
        android:paddingStart="15dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editReset"
        android:background="@drawable/login_button_shape"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"/>






</androidx.constraintlayout.widget.ConstraintLayout>