<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.LoginFragment">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        android:text="E-mail"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:layout_marginStart="28dp"/>



    <EditText
        android:id="@+id/loginEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:paddingStart="15dp"
        android:background="@drawable/login_edittext_shape"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmailEdit"
        android:text="Password"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_marginStart="28dp"/>


    <EditText
        android:id="@+id/loginPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_your_password"
        android:paddingStart="15dp"
        android:background="@drawable/login_edittext_shape"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordEdit"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginEnd="25dp"
        android:textColor="@color/appBlue"
        android:textStyle=""
        android:autoLink="web"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:text="Don't have an account? register"
        android:textSize="18sp"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:textColor="@color/appBlue"
        android:layout_marginTop="50dp" />



    <TextView
        android:id="@+id/orLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dontHaveAccount"
        android:text="or login with"
        android:textSize="15sp"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:textColor="@color/slateGrey"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_signIn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orLoginWith"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/login_google_button_shape"
        android:elevation="0dp"
        android:text="Sign in with Google"
        android:textAllCaps="false"
        android:textSize="17sp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:elevation="10dp"
        android:src="@drawable/google"
        app:layout_constraintStart_toStartOf="@id/google_signIn"
        app:layout_constraintTop_toTopOf="@id/google_signIn"
        app:layout_constraintBottom_toBottomOf="@id/google_signIn"/>




</androidx.constraintlayout.widget.ConstraintLayout>