<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.RegisterFragment">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textSize="35sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerText"
        android:text="Name"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:layout_marginStart="28dp"/>



    <EditText
        android:id="@+id/registerNameEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:paddingStart="15dp"
        android:background="@drawable/login_edittext_shape"
        />


    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerNameEdit"
        android:text="E-mail"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginStart="28dp"/>



    <EditText
        android:id="@+id/registerEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:paddingStart="15dp"
        android:background="@drawable/login_edittext_shape"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailEdit"
        android:text="Password"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_marginStart="28dp"/>


    <EditText
        android:id="@+id/registerPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_your_password"
        android:paddingStart="15dp"
        android:background="@drawable/login_edittext_shape"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordEdit"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        android:text="Have an account? login"
        android:textSize="18sp"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:textColor="@color/appBlue"
        android:layout_marginTop="70dp" />




</androidx.constraintlayout.widget.ConstraintLayout>